css/style.css
/* ... */
/* ===== MOBILE: Media queries for small mobile resolution. ===== */


@media only screen and (max-width: 360px) {


    /* ===== MOBILE: HAMBURGER MENU  ===== */
    /* ===== Reference: https://www.w3schools.com/howto/howto_js_mobile_navbar.asp  ===== */
    #nav-links {
        display: none;
        flex-direction: column;
        position: absolute;
        top: 75px;
        /*Position drop down beneath navbar*/
        left: 0px;
        /*Position drop down beneath navbar*/
        background-color: #178ca7;
        width: 100%;
        margin-left: 0;
        /*Remove margin on mobile so menu fills width of page*/
    }

    nav a {
        color: white;
        padding: 14px 16px;
        text-decoration: none;
        font-size: 17px;
        display: block;
    }

    .hamburger-menu {
        display: block;
        position: absolute;
        right: 0;
        top: 0;
        padding-right: 5px;
        width: 55px;
        height: 50px;
    }

    nav a:hover {
        background-color: #178ca7;
    }

    #top-of-page-link:hover {
        /*Remove background color from appearing when hovvering over logo*/
        background-color: initial;
    }

    /* ===== MOBILE: Resize elements for responsiveness  ===== */

    #nectar-brand-text {
        /* Logo text - make a little smaller */
        font-size: 30px;
        margin-left: 10px;
        padding-bottom: 5px;
    }

    nav img {
        height: 40px;
        /*Make logo slightly smaller on mobile*/
        width: 40px;
        margin-left: 0px;
    }

    footer p {
        width: 100%;
    }

    body {
        font-size: 80%;
    }

    /*Make Product Description Stick over the top of products as user scrolls
    so that they can still see product descriptions without scrolling up*/
    #Products .left-content {
        background-image: url(../images/mobile-ryan-dewerff-6erhLtR1U7I-unsplash.jpg);
        position: sticky;
        top: 0;

    }

    /* Resize home section */
    .home h1 {
        font-size: 40px;
        padding-right: 40px;
        padding-bottom: 220px;
    }

    .home img {
        width: 100px;
        height: 200px;
    }

    .page-content {
        padding: 0;
    }

    /* Resize article headings */
    h2 {
        font-size: 40px;
        margin: 5px;
    }

    /* Resize product description */
    #product-description-home span {
        display: block;
        padding-bottom: 25px;
        text-align: center;
    }

    .left-content-section {
        margin: 0px;
    }

    .left-content-section p {
        font-size: 14px;
    }

    #products-left-section p {
        margin-top: 50px;
    }

    .child-product-container {
        width: 100vh;
        /* Make products fill entire width of viewport */
        height: 300px;
        margin: 5px;
    }

    .child-product-container img {
        width: 75px;
        height: 150px;
    }

    .child-product-container p {
        font-size: 10px;
    }

    .slideshow-container {
        display: none;
        /*Hide slideshow on mobile*/
    }

    body {
        /* For Mobile use a different background that won't clash with text that appears over it */
        background-image: url(../images/mobile-ryan-dewerff-6erhLtR1U7I-unsplash.jpg);
        /*Photo by Ryan DeWerff on Unsplash*/
    }

    /* Make left columns all 100% width */
    #Our-Story .left-content,
    #Stockists .left-content,
    #Contact .left-content {
        min-width: 100%;
    }

    /* Trim the height to be automatic on mobile views */
    #Contact,
    #Stockists,
    #Our-Story, 
    #Products {
        height: auto;
    }

    /* Resize stockists */
    .child-stockists {
        /* Child Class for Stockists*/
        width: 100%;
        height: 300px;
        margin: 0;
        margin-bottom: 20px;
        margin-top: 20px;
        padding-bottom: 20px;
    }

    .child-stockists p {
        font-size: 16px;
    }

    .stockist-title {
        margin-top: 10px;
    }

    .child-stockists iframe {
        width: 250px;
        height: 225px;
    }

    #Stockists .right-content {
        max-width: 100%;
    }

    /* Resize Form */
    form {
        width: 100%;
        padding-bottom: 20px;
    }

}

